--- a/backend/package.json
+++ b/backend/package.json
@@ -24,17 +24,15 @@
     "@langchain/textsplitters": "^0.1.0",
     "@qdrant/js-client-rest": "^1.14.0",
     "bullmq": "^5.49.2",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.6.1",
-    "ioredis": "^5.6.1",
     "langchain": "^0.3.23",
     "mongoose": "^8.14.0",
-    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
-    "openai": "^4.96.0",
     "pdf-parse": "^1.1.1",
     "redis": "^4.7.0",
     "undici": "^7.8.0"
